force-app/main/default/objects/Cycle_Day_Events__c/Cycle_Day_Events__c.object-meta.xml
<CustomObject>
    <label>Cycle Day Event</label>
    <nameField>
        <displayFormat>DE - {00000}</displayFormat>
        <label>Day Day Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Day Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>