force-app/main/default/objects/Cycle_Day_Events__c/fields/Compact_Day_Display__c.field-meta.xml
<CustomField>
    <fullName>Compact_Day_Display__c</fullName>
    <formula>&quot;D&quot; &amp;TEXT(Cycle_Day_Number__c) &amp;&quot; &quot;&amp; LEFT(Day_of_Week__c ,3)&amp;&quot; &quot;&amp;  TEXT(DAY(Cycle_Day_Date__c)) &amp; &quot;/&quot; &amp; TEXT(MONTH(Cycle_Day_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compact Day Display</label>
    <type>Text</type>
</CustomField>