force-app/main/default/objects/Cycle_Day_Events__c/fields/Compiled_Date__c.field-meta.xml
<CustomField>
    <fullName>Compiled_Date__c</fullName>
    <formula>IF(
  Day_of_Week__c = NULL,
  &quot;D&quot; &amp; TEXT(Cycle_Day_Number__c),
  &quot;D&quot; &amp;
  TEXT(Cycle_Day_Number__c) &amp; &quot; &quot; &amp;
  LEFT(Day_of_Week__c, 3) &amp; &quot; &quot; &amp;
  TEXT(DAY(Cycle_Day_Date__c)) &amp; &quot;/&quot; &amp;
  TEXT(MONTH(Cycle_Day_Date__c)) &amp; &quot;/&quot; &amp;
  RIGHT(TEXT(YEAR(Cycle_Day_Date__c)), 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compiled Date</label>
    <type>Text</type>
</CustomField>