force-app/main/default/objects/Cycle_Day_Events__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <label>Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cycle Day Events</relationshipLabel>
    <relationshipName>Cycle_Day_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>