force-app/main/default/objects/Cycle_Day_Events__c/fields/Cycle_Day_Date__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Day_Date__c</fullName>
    <formula>IF ( Donor_Day_Event__c = TRUE,(IF(  Cycle__r.Fresh_Egg_Donor_Day_1__c =NULL|| Cycle_Day_Number__c &lt;1,  Prior_to_Day_1_Date__c , (Cycle__r.Fresh_Egg_Donor_Day_1__c + Cycle_Day_Number__c-1))),(IF( Cycle__r.Day_1__c =NULL|| Cycle_Day_Number__c &lt;1,  Prior_to_Day_1_Date__c , (Cycle__r.Day_1__c + Cycle_Day_Number__c-1))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Day Date</label>
    <type>Date</type>
</CustomField>