force-app/main/default/objects/Cycle_Day_Events__c/fields/Cycle_Day_Name__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Day_Name__c</fullName>
    <formula>IF(
ISBLANK(Cycle_Day_Date__c),
IF(
NOT(ISBLANK(Cycle_Day_Number__c)),
&quot;Day &quot; &amp; TEXT(Cycle_Day_Number__c),
&quot;&quot;
),
IF(
Cycle_Day_Date__c &gt;= Cycle__r.Day_1__c,
&quot;Day &quot; &amp; TEXT(Day_Cycle_Number_Formula__c),
&quot;Prior to Day 1&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Day Name</label>
    <type>Text</type>
</CustomField>