force-app/main/default/objects/Cycle_Day_Events__c/fields/Cycle_Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Day_Number__c</fullName>
    <label>Cycle Day Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>