force-app/main/default/objects/Cycle_Day_Events__c/fields/Day_Cycle_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Day_Cycle_Number_Formula__c</fullName>
    <formula>Cycle_Day_Date__c - Cycle__r.Day_1__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Cycle Number Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>