force-app/main/default/objects/Cycle_Day_Events__c/fields/Donor_Day_Event__c.field-meta.xml
<CustomField>
    <fullName>Donor_Day_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Day Event</label>
    <type>Checkbox</type>
</CustomField>