force-app/main/default/objects/Cycle_Day_Events__c/fields/E2__c.field-meta.xml
<CustomField>
    <fullName>E2__c</fullName>
    <label>E2</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>