force-app/main/default/objects/Cycle_Day_Events__c/fields/E2_Required__c.field-meta.xml
<CustomField>
    <fullName>E2_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E2 Required?</label>
    <type>Checkbox</type>
</CustomField>