force-app/main/default/objects/Cycle_Day_Events__c/fields/E2_Text__c.field-meta.xml
<CustomField>
    <fullName>E2_Text__c</fullName>
    <formula>IF(AND(E2__c = 0, E2_Required__c = TRUE), &quot;X&quot;,
  IF(E2__c = 0, &quot;&quot;, TEXT(E2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E2 Text</label>
    <type>Text</type>
</CustomField>