force-app/main/default/objects/Cycle_Day_Events__c/fields/FSH_Required__c.field-meta.xml
<CustomField>
    <fullName>FSH_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSH Required?</label>
    <type>Checkbox</type>
</CustomField>