force-app/main/default/objects/Cycle_Day_Events__c/fields/Have_Sex__c.field-meta.xml
<CustomField>
    <fullName>Have_Sex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Sex</label>
    <type>Checkbox</type>
</CustomField>