force-app/main/default/objects/Cycle_Day_Events__c/fields/Have_Sex_Text_Display__c.field-meta.xml
<CustomField>
    <fullName>Have_Sex_Text_Display__c</fullName>
    <formula>IF( Have_Sex__c = TRUE,&quot;X&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Have Sex Text Display</label>
    <type>Text</type>
</CustomField>