force-app/main/default/objects/Cycle_Day_Events__c/fields/HCG__c.field-meta.xml
<CustomField>
    <fullName>HCG__c</fullName>
    <label>HCG</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>