force-app/main/default/objects/Cycle_Day_Events__c/fields/HCG_Required__c.field-meta.xml
<CustomField>
    <fullName>HCG_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCG Required</label>
    <type>Checkbox</type>
</CustomField>