force-app/main/default/objects/Cycle_Day_Events__c/fields/HCG_Text__c.field-meta.xml
<CustomField>
    <fullName>HCG_Text__c</fullName>
    <formula>IF(AND(ISBLANK(HCG__c), HCG_Required__c = TRUE), &quot;X&quot;,
  IF(AND(NOT(ISBLANK(HCG__c)), HCG__c &lt;= 5), &quot;&lt;5&quot;, 
    TEXT(HCG__c))
)</formula>
    <label>HCG Text</label>
    <type>Text</type>
</CustomField>