force-app/main/default/objects/Cycle_Day_Events__c/fields/LH__c.field-meta.xml
<CustomField>
    <fullName>LH__c</fullName>
    <label>LH</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>