force-app/main/default/objects/Cycle_Day_Events__c/fields/LH_Required__c.field-meta.xml
<CustomField>
    <fullName>LH_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LH Required?</label>
    <type>Checkbox</type>
</CustomField>