force-app/main/default/objects/Cycle_Day_Events__c/fields/LH_Text__c.field-meta.xml
<CustomField>
    <fullName>LH_Text__c</fullName>
    <formula>IF(AND(LH__c = 0, LH_Required__c = TRUE), &quot;X&quot;,
  IF(LH__c = 0, &quot;&quot;, TEXT(LH__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LH Text</label>
    <type>Text</type>
</CustomField>