force-app/main/default/objects/Cycle_Day_Events__c/fields/Medication_1__c.field-meta.xml
<CustomField>
    <fullName>Medication_1__c</fullName>
    <label>Medication 1</label>
    <type>TextArea</type>
</CustomField>