force-app/main/default/objects/Cycle_Day_Events__c/fields/Medication_2__c.field-meta.xml
<CustomField>
    <fullName>Medication_2__c</fullName>
    <label>Medication 2</label>
    <type>TextArea</type>
</CustomField>