force-app/main/default/objects/Cycle_Day_Events__c/fields/Medication_3__c.field-meta.xml
<CustomField>
    <fullName>Medication_3__c</fullName>
    <label>Medication 3</label>
    <type>TextArea</type>
</CustomField>