force-app/main/default/objects/Cycle_Day_Events__c/fields/Medications__c.field-meta.xml
<CustomField>
    <fullName>Medications__c</fullName>
    <label>Medications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>