force-app/main/default/objects/Cycle_Day_Events__c/fields/Number_of_Follicles_Over_11mm_Left__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Follicles_Over_11mm_Left__c</fullName>
    <label>Number of Follicles Over 11mm Left</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>