force-app/main/default/objects/Cycle_Day_Events__c/fields/Nursing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Notes__c</fullName>
    <label>Nursing Notes</label>
    <type>TextArea</type>
</CustomField>