force-app/main/default/objects/Cycle_Day_Events__c/fields/Nursing_Notes_Long__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Notes_Long__c</fullName>
    <label>Nursing Notes Long</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>