force-app/main/default/objects/Cycle_Day_Events__c/fields/Ovulated_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Ovulated_as_Text__c</fullName>
    <formula>IF( Ovulated__c = TRUE,&quot;Yes&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ovulated as Text</label>
    <type>Text</type>
</CustomField>