force-app/main/default/objects/Cycle_Day_Events__c/fields/P4_Required__c.field-meta.xml
<CustomField>
    <fullName>P4_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P4 Required</label>
    <type>Checkbox</type>
</CustomField>