force-app/main/default/objects/Cycle_Day_Events__c/fields/P4_Text__c.field-meta.xml
<CustomField>
    <fullName>P4_Text__c</fullName>
    <formula>IF(AND(P4__c = 0, P4_Required__c = TRUE), &quot;X&quot;,
  IF(P4__c = 0, &quot;&quot;, TEXT(P4__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P4 Text</label>
    <type>Text</type>
</CustomField>