force-app/main/default/objects/Cycle_Day_Events__c/fields/Patients_Donors__c.field-meta.xml
<CustomField>
    <fullName>Patients_Donors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patients &amp; Donors</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycle Day Events</relationshipLabel>
    <relationshipName>Cycle_Day_Events</relationshipName>
    <type>Lookup</type>
</CustomField>