force-app/main/default/objects/Cycle_Day_Events__c/fields/Procedures__c.field-meta.xml
<CustomField>
    <fullName>Procedures__c</fullName>
    <label>Procedures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>